--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   http: ^1.2.1
   shared_preferences: ^2.2.2
+  shared_state: ^1.0.0
 
 dev_dependencies:
   flutter_test:
